@@ -6,14 +6,15 @@
         <h2>Rules</h2>
 
         <table class="table">
-            <tr><th>rule</th><th>val_warn</th><th>val_crit</th><th>active</th><th>dest</th></tr>
+            <tr><th>rule</th><th>val_warn</th><th>val_crit</th><th>dest</th><th>active</th><th>warn on null</th></tr>
             % for rule in rules:
             <tr>
                 <td>{{rule.name()}}</td>
                 <td>{{rule.val_warn}}</td>
                 <td>{{rule.val_crit}}</td>
-                <td>{{'Y' if rule.active else 'N'}}</td>
                 <td>{{rule.dest}}</td>
+                <td>{{'Y' if rule.active else 'N'}}</td>
+                <td>{{'Y' if rule.warn_on_null else 'N'}}</td>
                 <td>
                     <a href="{{root}}rules/view/{{rule.Id}}"><i class="icon-eye-open icon-white"></i></a>
                     <a href="{{root}}rules/edit/{{rule.Id}}"><i class="icon-pencil icon-white"></i></a>
