@@ -8,8 +8,9 @@
             %include templates/input form=form, field='expr', args={'rows': 10}
             %include templates/input form=form, field='val_warn', args={'placeholder': 'value to trigger warning at'}
             %include templates/input form=form, field='val_crit', args={'placeholder': 'value to trigger critical alert at'}
-            %include templates/input form=form, field='active'
             %include templates/input form=form, field='dest'
+            %include templates/input form=form, field='active'
+            %include templates/input form=form, field='warn_on_null'
             %include templates/btn-save
         </form>
         <div class="dl-horizontal span6">
